tests/fixtures/invalid/pow_bool_set.py
# Cannot call pow() with Bool, Set[int]
x = pow(True, {1, 2, 3})
